--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/inter": "^5.2.5",
     "@mui/joy": "5.0.0-beta.52",
+    "@tanstack/react-query": "^5.74.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
