--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@fontsource/inter": "^5.2.5",
     "@mui/joy": "5.0.0-beta.52",
+    "@mui/x-charts": "^8.0.0",
     "@tanstack/react-query": "^5.74.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
