fix: time values for graph

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/joy": "5.0.0-beta.52",
     "@mui/x-charts": "^8.0.0",
     "@tanstack/react-query": "^5.74.0",
+    "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.17"
